ris-pdm/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ris-dashboard
  labels:
    name: ris-dashboard
    app.kubernetes.io/name: ris-dashboard
    app.kubernetes.io/instance: production
